# zk-underconstraint-detector

./: .gitignore  Makefile  README.md  package-lock.json  pyproject.toml
configs/: best.toml  default.toml
models/: calibrator.joblib  pca_gmm.joblib  zkuc_detector.pkl
reports/: .~lock.scores.csv#  circomspect_compare.csv  family_holdout.md  gnark_scores.csv  m4_eval.json  metrics.md  noir_scores.csv  quickstart.md  quickstart_eval.json  rank_ablation.md  robustness_ci.md  scores.csv  scores_quick.csv
reports/ablations/: ablations.md
reports/probe_sweep/: dataset_probes10_algebraic.jsonl  dataset_probes20_algebraic.jsonl  dataset_probes50_algebraic.jsonl  dataset_probes5_algebraic.jsonl  probe_sweep_algebraic.md
scripts/: build_seedbank.sh
src/circuits/examples/: tiny_add.r1cs.json  tiny_add.witness.json
src/circuits/seedbank/: package-lock.json
src/circuits/seedbank/arith/: arith_link.circom  arith_link.r1cs  input.small.json
src/circuits/seedbank/merkle/: inputs.small.json  merkle_path.circom  merkle_path.r1cs
src/configs/: default.toml
src/metrics/: eval.py
src/zkuc/: cli.py
src/zkuc/core/: fieldla.py  jacobian.py  r1cs_io.py  rank_modp.py  witness_io.py
src/zkuc/dataset/: build.py  featurize.py
src/zkuc/experiments/: ablations.py
src/zkuc/features/: probe.py  structural.py
src/zkuc/integrations/: circomspect_adapter.py  gnark_adapter.py  noir_adapter.py
src/zkuc/metrics/: eval.py
src/zkuc/model/: baselines.py  calibrate.py  detector.py  pca_gmm.py
src/zkuc/seed/: mutators.py
tests/: test_m2.py  test_r1cs_io.py
(+10 files in other folders)
